--- a/templates/leads/components/drawers/request_lead.html
+++ b/templates/leads/components/drawers/request_lead.html
@@ -114,7 +114,7 @@
                                         </svg>
                                     </div>
                                     <input type="text" id="input-group-search"
-                                        class="block w-full p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                        class="block w-full p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-green-500 focus:border-green-5 s00 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-600"
                                         placeholder="Search Hashtags">
                                 </div>
                             </div>
@@ -128,7 +128,7 @@
                                         class="flex items-center ps-2 rounded-sm hover:bg-gray-100 dark:hover:bg-gray-600">
                                         <input id="hashtag-item-{{ hashtag.id }}" type="checkbox"
                                             value="{{ hashtag.id }}" data-name="{{ hashtag.name }}"
-                                            class="hashtag-checkbox w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
+                                            class="hashtag-checkbox w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
                                         <label for="hashtag-item-{{ hashtag.id }}"
                                             class="w-full py-2 ms-2 text-sm font-medium text-gray-900 rounded-sm dark:text-gray-300">
                                             #{{hashtag.name }}</label>
