Conditionally render CSV button, search input, filter buttons depending on if there are leads

--- a/templates/leads/leads.html
+++ b/templates/leads/leads.html
@@ -25,7 +25,7 @@
                             Request New Leads
                         </button>
 
-
+                        {% if leads%}
                         <div class="flex flex-col sm:flex-row gap-2 w-full sm:w-auto">
 
                             <a href="{% url 'leads:export_csv' %}" class="w-full sm:w-auto flex items-center justify-center px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
@@ -37,6 +37,7 @@
                                 Export as CSV
                             </a>
                         </div>
+                        {% endif %}
                     </div>
                 </div>
 
